k8s/frontend-customers/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-customers
  namespace: frontend-customers
  labels:
    app: frontend-customers
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-customers
  template:
    metadata:
      labels:
        app: frontend-customers
    spec:
      containers:
        - name: frontend-customers
          image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/novabank/dev/frontend-customers:${IMAGE_TAG}
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
