k8s/frontend-customers/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-customers
  namespace: frontend-customers
  labels:
    app: frontend-customers
spec:
  selector:
    app: frontend-customers
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
