k8s/frontend-customers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-customers-ingress
  namespace: frontend-customers
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: novabank-dev
    alb.ingress.kubernetes.io/group.order: "20"
spec:
  rules:
    - host: "${CUSTOMER_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-customers
                port:
                  number: 80
